--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,14 @@
 
-/* 
-font-family: 'Asap', sans-serif;
-font-family: 'Crimson Text', serif;
-font-family: 'Zilla Slab', serif; 
-*/
-
 body {
   margin: 0;
-  font-family: 'Asap', 'Ubuntu', sans-serif ;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -moz-osx-font-smoothing: grayscale;
 }
-h1, h2 {
-  font-family: 'Crimson Text', serif;
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
